--- a/ficore-accounting/templates/users/login.html
+++ b/ficore-accounting/templates/users/login.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="form-group mb-3 position-relative">
                     {{ form.password.label(class="form-label") | safe }}
-                    {{ form.password(class="form-control" + (" is-invalid" if form.password.errors else ""), required=True) | safe }}
+                    {{ form.password(class="form-control" + (" is-invalid" if form.password.errors else ""), required=True, id="password") | safe }}
                     <span class="password-toggle" onclick="togglePassword('password', 'toggle-password-icon')">
                         <i class="bi bi-eye" id="toggle-password-icon"></i>
                     </span>
